# pq-diary

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  deny.toml  requirements.md
.github/workflows/: ci.yml
ci/: smoke-test.ps1  smoke-test.sh
cli/: Cargo.toml
cli/src/: commands.rs  editor.rs  main.rs  password.rs  security.rs
cli/tests/: integration_test.rs
core/: Cargo.toml
core/src/: attachment.rs  crypto.rs  entry.rs  error.rs  git.rs  importer.rs  legacy.rs  lib.rs  link.rs  policy.rs  search.rs  stats.rs  template.rs  template_engine.rs  vault.rs
core/src/crypto/: aead.rs  dsa.rs  hkdf.rs  hmac_util.rs  kdf.rs  kem.rs  mdk.rs  mod.rs  password_policy.rs  secure_mem.rs  streaming.rs
core/src/vault/: change_password.rs  config.rs  format.rs  init.rs  keyslot.rs  mod.rs  reader.rs  writer.rs
docs/: backlog.md  definition-of-done.md  sprint-status.md  workflow.md
docs/adr/: 0001-pqc-library-selection.md  0002-vault-binary-format-v4.md  0003-password-input.md  0004-entry-link-notation.md  0005-template-storage.md  0006-git-sync-strategy.md  0007-win32-console-unsafe.md  0008-vault-integrity-mac.md  0009-keyslot-envelope-mdk-v6.md  0010-supply-chain-policy.md  README.md
docs/design/: vault-v6-keyslot-format.md
docs/design/daily-note-template-link/: architecture.md  dataflow.md  design-interview.md  types.rs
docs/design/entry-ops-cli/: architecture.md  dataflow.md  design-interview.md  types.rs
docs/design/s1-foundation/: architecture.md  dataflow.md  design-interview.md  types.rs
docs/design/s10-operations/: architecture.md  cli-commands.md  dataflow.md  design-interview.md  schema.md  types.rs
docs/design/s11-crossplatform/: architecture.md
docs/design/s12-legacy/: architecture.md  cli-commands.md  dataflow.md  design-interview.md  schema.md  types.rs
docs/design/s13-attachments/: architecture.md  cli-commands.md  dataflow.md  design-interview.md  schema.md  types.rs
docs/design/s2-crypto-core/: architecture.md  dataflow.md  design-interview.md  types.rs
docs/design/s3-vault-storage/: architecture.md  dataflow.md  types.rs
docs/design/s7-access-control-claude/: architecture.md  dataflow.md  design-interview.md  types.rs
docs/design/s8-git-sync/: architecture.md  dataflow.md  design-interview.md  types.rs
docs/design/s9-security-hardening/: architecture.md  dataflow.md  design-interview.md  types.rs
docs/design/search-stats-import/: architecture.md  dataflow.md  design-interview.md  types.rs
docs/spec/daily-note-template-link/: acceptance-criteria.md  interview-record.md  note.md  requirements.md  user-stories.md
docs/spec/entry-ops-cli/: acceptance-criteria.md  interview-record.md  note.md  requirements.md  user-stories.md
docs/spec/s1-foundation/: acceptance-criteria.md  interview-record.md  requirements.md  user-stories.md
docs/spec/s10-operations/: acceptance-criteria.md  interview-record.md  note.md  requirements.md  user-stories.md
docs/spec/s11-crossplatform/: acceptance-criteria.md  interview-record.md  note.md  requirements.md  user-stories.md
docs/spec/s12-legacy/: acceptance-criteria.md  interview-record.md  note.md  requirements.md  user-stories.md
docs/spec/s13-attachments/: acceptance-criteria.md  interview-record.md  note.md  requirements.md  user-stories.md
docs/spec/s16-keyslot/: acceptance-criteria.md  note.md  requirements.md
docs/spec/s2-crypto-core/: acceptance-criteria.md  interview-record.md  requirements.md  user-stories.md
docs/spec/s3-vault-storage/: acceptance-criteria.md  interview-record.md  (+2 more)
scripts/: run-sprint.sh
scripts/prompts/: implement.md  review.md  verify.md
(+134 files in other folders)
