[package]
name = "pq-diary"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pq-diary-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
secrecy = "0.10"
zeroize = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term", "user"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
