[package]
name = "pq-diary-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
argon2 = "0.5"
aes-gcm = "0.10"
ml-kem = { git = "https://github.com/sudolifeagain/ml-kem", branch = "pq-diary", features = ["getrandom", "zeroize"] }
ml-dsa = { git = "https://github.com/sudolifeagain/ml-dsa", branch = "pq-diary", features = ["zeroize"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
