[package]
name = "pq-diary-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
argon2 = "0.5"
aes-gcm = "0.10"
ml-kem = { git = "https://github.com/sudolifeagain/ml-kem", rev = "4338a86958d9b9435d558c51c79952e9408fe65b", features = ["getrandom", "zeroize"] }
ml-dsa = { git = "https://github.com/sudolifeagain/ml-dsa", rev = "fc61a1e6ecd286650f47b59eff3acf3e961edf90", features = ["zeroize"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
regex = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["mman"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }
